added main section

--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -62,6 +62,7 @@ font-size: 48px;
 font-weight: 800;
 letter-spacing: 0%;
 text-align: center;
+margin: 24px 0px;
 }
 .banner-description{
     display: flex;
@@ -69,6 +70,8 @@ text-align: center;
     justify-content: flex-start;
     align-items: center;
     padding: 0px;
+    margin: 24px 0px;
+
     color: rgb(13, 19, 33);
 font-family: Azeret Mono;
 font-size: 16px;
@@ -76,6 +79,7 @@ font-weight: 400;
 line-height: 26px;
 letter-spacing: 0%;
 text-align: center;
+
 margin-bottom: 50px;
 }
 .cntc-me{
@@ -98,4 +102,246 @@ flex-direction: row;
 justify-content: center;
 align-items: center;
 padding: 21px 24px 21px 24px;
+}
+.why-div{
+    padding: 80px 97px 80px 97px;
+border-radius: 16px;
+background: rgba(13, 19, 33, 0.02);
+}
+.why{     
+padding: 80px 97px 80px 97px;
+border-radius: 16px;
+}
+.why-title{
+    flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+margin: 24px 0px;
+    color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 32px;
+font-weight: 800;
+line-height: 37px;
+text-align: center;
+}
+.why-description{
+    flex: none;
+order: 1;
+align-self: stretch;
+flex-grow: 0;
+margin: 24px 0px;
+    color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+text-align: center;
+opacity: 0.7;
+}
+.why-body{
+    margin-left: 20px;
+    margin-right: 20px;
+    border-radius: 16px;
+background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+    
+}
+/* content style */
+
+.btn-more{
+    display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 12px 20px 12px 20px;
+    box-sizing: border-box;
+border: 1px solid rgb(13, 19, 33);
+opacity: 0.7;
+flex: none;
+order: 1;
+flex-grow: 0;
+margin: 32px 0px;
+}
+.content{
+    padding: 48px;
+}
+.content-1-div{
+    margin: 0px 10px;
+}
+.content-2-div{
+
+}
+.content-1{
+display: flex;
+justify-content: center;
+padding: 40px;
+}
+.content-2{
+    display: flex;
+    justify-content: center;
+    padding: 40px;
+}
+.content-3{
+    display: flex;
+    justify-content: center;
+    padding: 40px;
+}
+.content-1-title{
+    color: rgba(13, 19, 33, 0.7);
+font-family: Azeret Mono;
+font-size: 24px;
+font-weight: 700;
+line-height: 36px;
+text-align: left;
+}
+.content-1-description{
+    color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+text-align: left;
+opacity: 0.7;
+}
+.video{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+iframe{
+    padding: 26px;
+    border-radius: 16px;
+    border: 1px solid;
+}
+
+.skills-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+}
+
+.skill-1{
+    border-radius: 16px;
+background: rgba(255, 76, 30, 0.05);
+padding: 40px;
+}
+.skill-2{
+    padding: 40px;
+    border-radius: 16px;
+    background: rgba(0, 76, 232, 0.05);
+}
+.skill-3{
+    border-radius: 16px;
+    background: rgba(255, 223, 0, 0.05);
+    padding: 40px;
+}
+.skill-title{
+    color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 24px;
+font-weight: 800;
+line-height: 36px;
+text-align: left;
+}
+.skill-description{
+    color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+text-align: left;
+opacity: 0.7;
+}
+.skill-btn{
+    color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 16px;
+font-weight: 700;
+line-height: 19px;
+letter-spacing: 0%;
+text-align: left;
+text-decoration-line: underline;
+}
+.about{
+    background-image:url(../assets/handshake.jpg);
+    background-size: cover;
+    border-radius: 16px;
+background: rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),url(Email);
+    display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+padding: 0px;
+padding: 64px 48px 64px 48px;
+
+}
+.about-title{
+    color: rgb(255, 255, 255);
+font-family: Azeret Mono;
+font-size: 32px;
+font-weight: 700;
+line-height: 36px;
+letter-spacing: 0%;
+text-align: center;
+}
+.about-description{
+    
+    color: rgb(255, 255, 255);
+font-family: Azeret Mono;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+text-align: center;
+opacity: 0.7;
+}
+form{
+    flex: none;
+order: 1;
+flex-grow: 0;
+margin: 24px 0px;
+}
+#box{
+padding: 19px 20px 19px 20px;
+box-sizing: border-box;
+border: 1px solid rgba(13, 19, 33, 0.15);
+border-radius: 8px;
+background: rgb(255, 255, 255);
+    color: rgba(13, 19, 33, 0.4);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 0%;
+    text-align: center;
+
+}
+#submit{
+    border-radius: 8px;
+background: rgb(255, 255, 255);
+color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 16px;
+font-weight: 600;
+line-height: 23px;
+letter-spacing: 0%;
+text-align: center;
+}
+.bg{
+    border-radius: 16px;
+background: rgba(13, 19, 33, 0.03);
+display: flex;
+align-items: center;
+justify-content: space-between;
+opacity: 0.7;
+}
+.bg-title{
+    color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 20px;
+font-weight: 600;
+line-height: 23px;
+text-align: center;
 }
